Fix background color issues on small screens

--- a/source/sass/_topic.scss
+++ b/source/sass/_topic.scss
@@ -63,10 +63,16 @@
     font-weight: 600;
     text-transform: uppercase;
     position: relative;
+    @media (max-width: 640px) {
+      font-size:20px;
+    }
   }
 
   p {
     font-weight: 400;
     font-size: 20px;
+    @media (max-width: 640px) {
+      font-size:18px;
+    }
   }
 }
